<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/judulform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/montsemi"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:text="Form"
        android:textColor="#22272B"
        android:textSize="40dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/judulform"
        android:clipToPadding="false"
        android:fillViewport="false"
        android:paddingBottom="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="2dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/idSewa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsbold"
                        android:gravity="center"
                        android:text="Identitas Penyewa"
                        android:textColor="@color/colorPrimary"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/idSewa"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/popmedium"
                        android:text="@string/nama_penyewa"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/eTNama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtName"
                        android:fontFamily="@font/popmedium"
                        android:hint="Masukkan Nama (Max 15 karakter)"
                        android:inputType="text"
                        android:maxLength="20"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtAlamat"
                        android:fontFamily="@font/popmedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/eTNama"
                        android:layout_marginTop="10dp"
                        android:text="@string/alamat"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/eTAlamat"
                        android:fontFamily="@font/popreg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtAlamat"
                        android:hint="Masukkan Alamat Anda"
                        android:inputType="text"
                        android:maxLength="20"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtTlp"
                        android:fontFamily="@font/popmedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/eTAlamat"
                        android:layout_marginTop="10dp"
                        android:text="@string/no_telp_hp"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/eTHP"
                        android:fontFamily="@font/popreg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtTlp"
                        android:hint="Masukkan No. Telp/HP"
                        android:inputType="number"
                        android:maxLength="20"
                        android:textSize="16sp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="2dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/idDtMbl"
                        android:fontFamily="@font/poppinsbold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Data Mobil"
                        android:textColor="@color/colorPrimary"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtMerk"
                        android:fontFamily="@font/popmedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/idDtMbl"
                        android:layout_marginTop="20dp"
                        android:text="@string/merk_mobil"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/txtMerk" />

                    <TextView
                        android:id="@+id/txtPromo"
                        android:fontFamily="@font/popmedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/spinner"
                        android:layout_marginTop="20dp"
                        android:text="Promo"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <RadioGroup
                        android:id="@+id/promoGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtPromo"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbWeekDay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:checked="true"
                            android:fontFamily="@font/popreg"
                            android:text="Weekday (10%)"
                            android:textColor="@color/colorPrimary" />

                        <RadioButton
                            android:id="@+id/rbWeekEnd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/popreg"
                            android:layout_weight="1"
                            android:text="Weekend (25%)"
                            android:textColor="@color/colorPrimary" />

                    </RadioGroup>

                    <TextView
                        android:id="@+id/txtLmSewa"
                        android:fontFamily="@font/popmedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/promoGroup"
                        android:layout_marginTop="20dp"
                        android:text="@string/lama_sewa"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/eTLamaSewa"
                        android:fontFamily="@font/popreg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtLmSewa"
                        android:hint="Masukkan Lamanya Hari Penyewaan"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textSize="16sp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/selesaiHitung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Selesai"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:backgroundTint="#22272B"
                app:cornerRadius="50dp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>